--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -6,19 +6,9 @@
   android:layout_height="match_parent">
 
   <FrameLayout
-    android:id="@+id/cameraPreview"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_weight="1"
-  />
-
-  <TextView
-      android:id="@+id/scanText"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="Scanning..."
-      android:textSize="15dp" >
-
-  </TextView>
+      android:id="@+id/cameraPreview"
+      android:layout_width="480dp"
+      android:layout_height="0dp"
+      android:layout_weight="0.34" />
 
 </LinearLayout>
